fix dark light theme state and scrollbar issues

--- a/src/components/root.scss
+++ b/src/components/root.scss
@@ -1,3 +1,11 @@
+[data-theme='dark'] {
+    color-scheme: dark;
+}
+
+[data-theme='light'] {
+    color-scheme: light;
+}
+
 h1,
 h2,
 h3,
@@ -608,6 +616,7 @@ code {
         height: auto;
         display: flex;
         flex-direction: column;
+        background-color: var(--surface-neutral-t1-base);
 
         [data-divider] {
             margin: var(--spacing-sizing-02) var(--spacing-sizing-03);
